--- a/index.html
+++ b/index.html
@@ -4,10 +4,15 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TJ Feed & Fisheries - Premium Fish Feed in Ilorin</title>
+    
+    <!-- SEO Description -->
+    <meta name="description" content="FOF Fumigation Service offers professional pest control in Nigeria. We specialize in termite defense, rodent exclusion, bed bug heat treatment, and viral disinfection for homes and businesses. Get a fast quote today." />
+    
+    <title>FOF - Fumigation Service</title>
   </head>
   <body>
     <div id="root"></div>
-    <script type="module" src="/src/index.jsx"></script>
+    <script type="module" src="/src/main.jsx"></script>
   </body>
 </html>
+
